<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_extra_large"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="Hello World" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_dialog" />

        <Button
            android:id="@+id/btn_confirm_ext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm_ext" />

        <Button
            android:id="@+id/btn_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_alert" />

        <Button
            android:id="@+id/btn_alert_ext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_alert_ext" />

        <Button
            android:id="@+id/btn_set_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_items" />

        <Button
            android:id="@+id/btn_set_items_ext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_items_ext" />

        <Button
            android:id="@+id/btn_multi_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_multi_choice" />

        <Button
            android:id="@+id/btn_multi_choice_ext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_multi_choice_ext" />

        <Button
            android:id="@+id/btn_single_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_single_choice" />

        <Button
            android:id="@+id/btn_single_choice_ext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_single_choice_ext" />

        <Button
            android:id="@+id/btn_dialog_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_fragment" />

        <Button
            android:id="@+id/btn_dialog_fragment_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_fragment_with_result" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
